# filemaptree

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-assign.yml
filemaptree/: cli.py  renderer.py  walker.py
